--- a/package.json
+++ b/package.json
@@ -13,16 +13,12 @@
     "@supabase/supabase-js": "^2.57.4",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
-    "bcryptjs": "^2.4.3",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.1",
     "daisyui": "^5.0.54",
     "jose": "^6.1.0",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "sql.js": "^1.13.0"
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
