--- a/vercel.json
+++ b/vercel.json
@@ -6,26 +6,36 @@
   "framework": "vite",
   "rewrites": [
     {
-      "source": "/((?!assets|.*\\..*|favicon|robots|sitemap).*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ],
   "headers": [
     {
-      "source": "/assets/(.*)",
+      "source": "/assets/(.*\\.js)",
       "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript; charset=utf-8"
+        },
         {
           "key": "Cache-Control",
           "value": "public, max-age=31536000, immutable"
-        },
+        }
+      ]
+    },
+    {
+      "source": "/assets/(.*\\.css)",
+      "headers": [
         {
           "key": "Content-Type",
-          "value": "application/javascript"
+          "value": "text/css; charset=utf-8"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
         }
       ]
     }
-  ],
-  "env": {
-    "VITE_DATABASE_TYPE": "supabase"
-  }
+  ]
 }
