feat: Completar proyecto al 100% - Organizar archivos y eliminar Sentry
- Organizar scripts SQL en carpeta database/
- Mover tests unitarios a src/tests/
- Eliminar Sentry (no necesario para proyecto acadÃ©mico)
- Eliminar archivos SQL duplicados
- Completar gamificaciÃ³n con datos reales
- Agregar Service Worker para PWA
- Implementar tests unitarios y E2E
- Configurar CI/CD con GitHub Actions
- Agregar documentaciÃ³n JSDoc
- Corregir funciÃ³n RPC increment_views
- Corregir permisos de message_reads

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,12 +7,37 @@
   "background_color": "#ffffff",
   "theme_color": "#059669",
   "orientation": "portrait-primary",
+  "scope": "/",
   "icons": [
     {
       "src": "/favicon.svg",
       "sizes": "any",
       "type": "image/svg+xml",
       "purpose": "any maskable"
+    },
+    {
+      "src": "/logo.svg",
+      "sizes": "512x512",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
+    }
+  ],
+  "categories": ["shopping", "lifestyle", "social"],
+  "screenshots": [],
+  "shortcuts": [
+    {
+      "name": "Publicar Producto",
+      "short_name": "Publicar",
+      "description": "Publica un nuevo producto",
+      "url": "/dashboard?action=publish",
+      "icons": [{ "src": "/logo.svg", "sizes": "96x96" }]
+    },
+    {
+      "name": "Favoritos",
+      "short_name": "Favoritos",
+      "description": "Ver tus productos favoritos",
+      "url": "/favorites",
+      "icons": [{ "src": "/logo.svg", "sizes": "96x96" }]
     }
   ]
 }
