--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "daisyui": "^5.0.54",
+    "framer-motion": "^12.23.25",
     "jose": "^6.1.0",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
